# Modular_Arithmetic_Calculator

./: .gitignore  CMakeLists.txt  Mod.cpp  Mod.h  README.md  a.out  main.cpp
scripts/: run.sh
src/: Mod.cpp  Mod.hpp
test/: test.cpp
